syntax = "proto3";

package example.first;

option go_package = "firstpb";

message PersonMessage {
    int32 id = 1;
    bool is_adult = 2;
    string name = 3;
    repeated int32 lucky_numbers = 4;
}





